Fix pw strength module spacing (#520)
**Why**: because it was off

--- a/app/assets/stylesheets/components/_space-misc.scss
+++ b/app/assets/stylesheets/components/_space-misc.scss
@@ -2,6 +2,7 @@
 .mb-tiny { margin-bottom: $space-tiny; }
 .mt-tiny { margin-top: $space-tiny; }
 .pb-tiny { padding-bottom: $space-tiny; }
+.pt-tiny { padding-top: $space-tiny; }
 .px-tiny { padding-left: $space-tiny; padding-right: $space-tiny; }
 
 .mb-12p { margin-bottom: 12px; }
